# tree-sitter-astro

./: .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  flake.nix  grammar.js  package-lock.json  package.json  test.astro  test2.astro  test3.astro  test4.astro  test5.astro  test6.astro  test7.astro
.github/workflows/: ci.yml  fuzz.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: astro-doc-example.txt  attribute-backtick-strings.txt  basic.txt  case-should-be-preserved.txt  delimiter-index-should-resume-correctly.txt  delimiter-stress-test-easy.txt  delimiter-stress-test-hard.txt  eat-last-curly-brace-of-interpolated-attribute.txt  element-in-html-interpolation.txt  empty-frontmatter.txt  fragment-empty-tag.txt  interpolated-attribute-map.txt  interpolated-string-doesnt-need-to-have-balanced-braces.txt  less-than-greater-than-in-html-interpolations.txt  long-test.txt  permissible-text-marks-end-in-string-state.txt  self-closing-script-and-style-tags.txt  string-directly-before-frontmatter-end.txt  three-hyphens-in-frontmatter.txt  two-elements-in-html-interpolation.txt  unclosed-interpolation.txt  void-tag-in-interpolation.txt
queries/: injections.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc  tag.h
