[package]
name = "tree-sitter-astro"
description = "Astro grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "astro"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-astro"
edition = "2021"
license = "MIT"
build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
autoexamples = false

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
